WebCore:

2008-08-04  Bernhard Kruepl  <kruepl@dbai.tuwien.ac.at>

        Reviewed by Dave Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19094
        Corrected offsetTop for table cells by subtracting borderTopExtra

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::offsetTop):

LayoutTests:

2008-08-04  Bernhard Kruepl  <kruepl@dbai.tuwien.ac.at>

        Reviewed by Dave Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19094
        Tests for offsetTop of table cells updated so that they don't include borderExtraTop

        * fast/dom/Element/offsetTop-table-cell-expected.txt:
        * fast/dom/Element/offsetTop-table-cell.html:



Canonical link: https://commits.webkit.org/27968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35551 268f45cc-cd09-0410-ab3c-d52691b4dbfc